<resources>
    <string name="app_name">RunAway</string>
    <string name="google_maps_api_key">AIzaSyAvy8OkxIJm-GETGFOxLcfdJlv01bpGnxA</string>

    <string name="splash_description">Logo</string>

    <string name="title_login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_register_link">Don\'t have an account? Register.</string>

    <string name="title_register">Register</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_login_link">Already have an account? Login.</string>
    <string name="no_location_found">No location found</string>
    <string name="title_map">Map</string>
    <string name="title_full_map">Route Map</string>

    <string name="title_stats">Stats and Goals</string>
    <string name="title_full_stats">Stats and Goals</string>

    <string name="title_stats_distance">Distance</string>
    <string name="title_stats_speed">Speed</string>
    <string name="title_stats_steps">Steps</string>
    <string name="title_stats_time">Time</string>

    <string name="title_add_goal">Add Goal</string>
    <string name="add_goal_type">Goal Type</string>
    <string name="add_goal_value">Value (Meters/Steps/Minutes)</string>
    <string name="add_goal_frequency">Frequency</string>

    <string name="title_track">Track</string>
    <string name="title_full_track">Track Exercise</string>
    <string name="track_time">Time</string>
    <string name="track_time_value">00:00:00</string>
    <string name="track_distance">Distance</string>
    <string name="track_distance_value">0 m</string>
    <string name="track_altitude">Altitude</string>
    <string name="track_altitude_value">0</string>
    <string name="track_altitude_unit">m</string>
    <string name="track_steps">Steps</string>
    <string name="track_steps_value">0</string>
    <string name="track_speed">Speed</string>
    <string name="track_speed_value">0</string>
    <string name="track_speed_unit">min/Km</string>

    <string name="title_exercises">Exercises</string>
    <string name="title_full_exercises">Exercises</string>

    <string name="title_meals">Meals</string>
    <string name="title_full_meals">Nutrition Tracker</string>
    <string name="meals_delete">Delete</string>

    <string name="title_add_meal">Add Meal</string>
    <string name="add_meal_food">Food</string>
    <string name="add_meal_meal_time">Meal Time</string>

    <string name="title_add_food">Add Food</string>
    <string name="add_food_name">Name</string>
    <string name="add_food_calories">Calories</string>

    <string name="title_settings">Settings</string>
    <string name="title_full_settings">Settings</string>

    <string name="title_change_password">Change Password</string>
    <string name="change_password_old">Old Password</string>
    <string name="change_password_new">New Password</string>


    <string name="spinner_routes">Routes</string>

    <string name="internet_connection_required">Internet connection required</string>
    <string name="connect_to_internet">Connect to internet?</string>

    <string name="gps_service_required">Gps service required</string>
    <string name="turn_on_gps">Turn on Gps?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="map_routes">

        <item>Select Route</item>
        <item>Caminho Atum</item>
        <item>Caminho Sabão</item>

    </string-array>
    <string name="current_position">Current Position</string>
    <string name="start_position">Start</string>
    <string name="end_position">End</string>
    <string name="permissions_reload">Reload after accepting permissions</string>
    <string name="internet_reload">Reload after connecting to the internet</string>
    <string name="gps_reload">Reload after turing gps on</string>
    <string name="reload">Reload</string>
    <string name="change_email_password">Change Email/Password</string>
    <string name="change_dynamic">Dynamic Mode</string>
    <string name="change_theme">Dark Mode</string>
    <string name="logout">Logout</string>
</resources>
