<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats_black_24dp"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_track"
        android:icon="@drawable/ic_track_black_24dp"
        android:title="@string/title_track"
        android:checked="true"/>

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_exercises_black_24dp"
        android:title="@string/title_exercises" />

    <item
        android:id="@+id/navigation_meals"
        android:icon="@drawable/ic_meals_black_24dp"
        android:title="@string/title_meals" />

</menu>
