<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.runaway.runaway.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="@drawable/shadow_box"
        android:elevation="8dp"
        android:layout_margin="15dp"
        android:padding="15dp">

        <RelativeLayout
            android:id="@+id/nameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/goalTypeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/goalTypeValue"
                android:text="@string/add_goal_type" />

            <Spinner
                android:id="@+id/goalTypeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/goalTypeLabel" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/goalValueInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/goalValueLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/goalValue"
                android:text="@string/add_goal_value" />

            <EditText
                android:id="@+id/goalValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/goalValueLabel"
                android:ems="10"
                android:inputType="number"
                tools:ignore="Autofill"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frequencyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/frequencyLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/frequencyValue"
                android:text="@string/add_goal_frequency" />

            <Spinner
                android:id="@+id/frequencyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frequencyLabel" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp">

            <Button
                android:id="@+id/addGoalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:text="@string/title_add_goal" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>