<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.runaway.runaway.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="@drawable/shadow_box"
        android:elevation="8dp"
        android:layout_margin="15dp"
        android:padding="15dp">

        <RelativeLayout
            android:id="@+id/foodInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/foodLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/foodValue"
                android:text="@string/add_meal_food" />

            <Spinner
                android:id="@+id/foodValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foodLabel" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mealTimeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/mealTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/mealTimeValue"
                android:text="@string/add_meal_meal_time" />

            <Spinner
                android:id="@+id/mealTimeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mealTimeLabel" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/buttonInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp">

            <Button
                android:id="@+id/addMealButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:text="@string/title_add_meal" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/colorAccent"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal" />

</RelativeLayout>